Se realizan ajustes al proyecto, mejorando estructura general